# bevy_smithay

./: Cargo.toml  LICENSE  README.md  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  feature_request.md
examples/: layer_shell.rs  multi_window_layer_shell.rs
examples/layer_shell/: Cargo.toml
examples/layer_shell/src/: main.rs
examples/xdg_shell/: Cargo.toml
src/: lib.rs  smithay_windows.rs  state.rs  system.rs
src/handlers/: keyboard.rs  keyboard_handler.rs  mod.rs  pointer.rs  pointer_handler.rs  touch.rs  touch_handler.rs
src/input/: keyboard.rs  mod.rs  pointer.rs  touch.rs
src/shells/: layer_shell.rs  mod.rs  subsurface.rs
