[package]
name = "bevy_smithay"
description = "Smithay Client toolkit support for bevy."
version = "0.1.0"
edition = "2024"
authors = ["Naman Agrawal <namana@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
repository = "https://github.com/mecha-org/bevy_smithay"
license = "MIT"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_window",
] }
cfg-if = "1.0.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.19.2"
wayland-backend = { version = "0.3.8", features = ["client_system"] }

[dev-dependencies]
bevy = { version = "0.15.3", default-features = true } 
